# Library_Base_Compositions

./: .gitignore  Cargo.toml  README.md  documentation.md  download-extract.sh  json_example.txt  process_files.bat  process_files.sh
.github/workflows/: end-to-end.yml  gen-binaries.yml  rust.yml  test.yml
Step 3/: documentation.md  sample_fastq_file.pl
data/: retrieve_query_urls.pl
data/download-extract/: ci-download-extract.sh  download-extract.sh  output.csv  output.tsv
examples/: base_extraction_sample.txt  extract-comp_out.txt  out_sample.txt  plot_base.txt
examples/extract-comp/: main.rs  out-ref.json  out.json
examples/plot-comp/: main.rs
extract_comp/: Cargo.toml
extract_comp/src/: lib.rs  main.rs
fastq2comp/: Cargo.toml  Web.toml  documentation.md
fastq2comp/src/: lib.rs  main.rs
fastq2comp4web/: Cargo.toml
fastq2comp4web/www/: index.html  index.js
fastq_io/: Cargo.toml
fastq_io/src/: lib.rs
plot_comp/: Cargo.toml
plot_comp/src/: lib.rs  main.rs
sample_fastq/: Cargo.toml
sample_fastq/src/: lib.rs  main.rs
src/: extract_comp.rs  extract_fastq_comp.rs  lib.rs  plot_comp.rs
