[package]
name = "fastq2comp"
version = "1.0.0"
authors = ["Kartavya Vashishtha <kartavya0703@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.3.13"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
simple_logger = "1.9.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
plotters = "0.3.*"
plotters-backend = "0.3.*"
