[package]
name = "fastq2comp"
version = "0.2.0"
authors = ["Kartavya Vashishtha <kartavya0703@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.3.13"
regex = "1"
flate2 = "1.0.20"
lazy_static = "1.4.0" # Useful for global Regex check
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
plotters = "0.3.*"
plotters-backend = "0.3.*"
reservoir-sampling = "^0.3.*" 