[package]
name = "sample_fastq"
version = "0.1.0"
authors = ["Kartavya Vashishtha <kartavya0703@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
simple_logger = "1.9.0"
regex = "1"
fastq_io = { path = "../fastq_io" }